# grubhub

./: LICENSE
backend/: .gitignore  Cargo.toml  client.ts
backend/doc/: doc.ts
backend/sql/: example.sql  schema.sql
backend/src/: connection.rs  example.rs  handlers.rs  main.rs  types.rs
backend/src/handlers/: group.rs  group_search.rs  groups_all.rs  mark_as_read.rs  tags_all.rs  user_inbox.rs
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Directory.jsx  DropDown.jsx  GroupsTable.jsx  Home.jsx  Inbox.jsx  TopBar.jsx
frontend/src/css/: directory.css  dropdown.css  groupstable.css  inbox.css  topbar.css
frontend/src/pages/: _app.tsx  directory.tsx  index.tsx
frontend/src/pages/api/: hello.ts  helpers.ts  interfaces.ts
