[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["json"] }
chrono = { version = "0.4.34", features = ["serde"] }
color-eyre = "0.6.2"
fallible-iterator = "0.3.0"
once_cell = "1.19.0"
rusqlite = { version = "0.31.0", features = ["chrono"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
